// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`summary > showSetupSummary > should match snapshot for skipped/mixed status patterns > complex-mixed-status 1`] = `
"  [████████████░░░░░░░░] 3/5 completed

  ✔ Dependencies (installed)
  ⚠ biome.json (already exists)
  ✔ Scripts (added)
  ✖ .vscode/settings.json (permission denied)
  ✔ lefthook.yml (created)"
`;

exports[`summary > showSetupSummary > should match snapshot for skipped/mixed status patterns > skipped-mixed-patterns 1`] = `
"  [░░░░░░░░░░░░░░░░░░░░] 0/5 completed

  ⚠ Dependencies (skipped)
  ⚠ biome.json (skipped)
  ⚠ Scripts (skipped)
  ⚠ .vscode/settings.json (skipped)
  ⚠ lefthook.yml (skipped)"
`;

exports[`summary > showSetupSummary > should match snapshot for success/failure patterns > success-failure-mixed 1`] = `
"  [████████████░░░░░░░░] 3/5 completed

  ✔ Dependencies (installed)
  ✖ biome.json (failed)
  ✔ Scripts (added)
  ✔ .vscode/settings.json (created)
  ⚠ lefthook.yml (skipped)"
`;

exports[`summary > showSetupSummary > should match snapshot for success/failure patterns > success-failure-patterns 1`] = `
"  [████████████████████] 5/5 completed

  ✔ Dependencies (installed)
  ✔ biome.json (created)
  ✔ Scripts (added)
  ✔ .vscode/settings.json (created)
  ✔ lefthook.yml (created)"
`;
